--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -68,10 +68,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/col"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:textAlignment="center"
-
-                android:text="Kietnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn"
+                android:text=""
                 android:id="@+id/collegeBs"
                 />
         </RelativeLayout>
@@ -88,7 +87,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="See his/her Submission"
+        android:text="See their Submission"
         android:textColor="#03A9F4"
         android:id="@+id/submissionBs"
         android:layout_gravity="center"
