--- a/app/src/main/res/layout/fragment_contest_overview.xml
+++ b/app/src/main/res/layout/fragment_contest_overview.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+
     <LinearLayout
         android:id="@+id/pro"
         android:layout_width="match_parent"
@@ -40,7 +41,10 @@
                 android:textSize="18sp" />
         </RelativeLayout>
     </LinearLayout>
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/participant_refresh">
     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
@@ -211,4 +215,6 @@
                 android:textStyle="bold" />
         </RelativeLayout>
     </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
