--- a/app/src/main/res/layout/activity_contest_details.xml
+++ b/app/src/main/res/layout/activity_contest_details.xml
@@ -124,7 +124,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1st prize:"
+                    android:text="1st prize(₹):"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                      />
@@ -136,7 +136,6 @@
                     android:layout_marginRight="15dp"
                     android:layout_weight="1"
                     android:background="@drawable/white_border"
-                    android:hint="150"
 
                     android:textColor="@color/black" />
 
@@ -144,7 +143,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="2nd prize:"
+                    android:text="2nd prize(₹):"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                    />
@@ -157,7 +156,6 @@
 
                     android:layout_weight="1"
                     android:background="@drawable/white_border"
-                    android:hint="100"
 
 
                     android:textColor="@color/black" />
@@ -166,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="3rd prize:"
+                    android:text="3rd prize(₹):"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                    />
@@ -178,7 +176,6 @@
                     android:layout_marginRight="15dp"
                     android:layout_weight="1"
                     android:background="@drawable/white_border"
-                    android:hint="50"
 
 
                     android:textColor="@color/black" />
@@ -393,7 +390,7 @@ android:visibility="gone"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
-                            android:text="Entry Fee"
+                            android:text="Entry Fee(₹)"
                             android:textColor="@color/grey" />
 
                         <TextView
@@ -402,7 +399,7 @@ android:visibility="gone"
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
 
-                            android:text="Total Prize"
+                            android:text="Total Prize(₹)"
                             android:textColor="@color/grey" />
 
 
@@ -420,7 +417,6 @@ android:visibility="gone"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
-                            android:text="₹10"
                             android:textColor="@color/black" />
 
                         <TextView
@@ -429,7 +425,6 @@ android:visibility="gone"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
-                            android:text="₹100"
 
                             android:textColor="@color/black" />
 
