--- a/app/src/main/res/layout/layout_contest_item.xml
+++ b/app/src/main/res/layout/layout_contest_item.xml
@@ -236,13 +236,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total Prize: "
+                    android:text="Total Prize(₹):"
                     android:textColor="@color/black"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1000"
                     android:id="@+id/totalprizeD"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
@@ -304,7 +303,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Entry Fee: "
+                    android:text="Entry Fee(₹): "
                     android:textColor="@color/grey"/>
 
                 <TextView
