--- a/app/src/main/res/layout/layout_contest_item.xml
+++ b/app/src/main/res/layout/layout_contest_item.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/white"
-    app:cardUseCompatPadding="true"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="10dp"
-    app:contentPadding="3dp"
-    android:padding="10dp"
-    android:background="@drawable/grey_border_bottom"
     android:layout_height="wrap_content">
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        app:cardBackgroundColor="@color/white"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="10dp"
+        app:contentPadding="3dp"
+        android:id="@+id/card"
+        android:padding="10dp"
+        android:background="@drawable/grey_border_bottom"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -347,3 +351,11 @@
 
 
 </androidx.cardview.widget.CardView>
+<ImageView
+android:layout_width="match_parent"
+android:layout_height="100dp"
+    android:layout_below="@id/card"
+    android:visibility="gone"
+android:id="@+id/sponsor"
+/>
+</RelativeLayout>
